ADEN-11044 Another z-index fix

--- a/platforms/ucp-desktop/styles.scss
+++ b/platforms/ucp-desktop/styles.scss
@@ -18,13 +18,14 @@
 
 		.fandom-sticky-header {
 			margin-top: -46px;
+			z-index: 401;
 		}
 
 		#top_leaderboard,
 		#hivi_leaderboard {
 			$global-navigation-width: 66px;
 
-			@include bfaa-slot(600, $global-navigation-width);
+			@include bfaa-slot(402, $global-navigation-width);
 			@include sticky-tlb-slot($global-navigation-width);
 
 			margin-left: $global-navigation-width;
